<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ExperienceFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="PROFESSIONAL EXPERIENCE" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <TextView
            android:text="@string/role"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/role_des"
            android:textSize="22sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/company2"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/company2_des"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <TextView
            android:text="@string/role"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/role_des"
            android:textSize="22sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/company1"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/company1_des"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <TextView
            android:text="Technologies"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/technologies"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>